# kucoin_manager

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  README.md  account.json  logging.conf  pyproject.toml  todo.txt
.github/workflows/: tests.yml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
kucoin_manager/: __init__.py  __main__.py  conftest.py  settings.py
kucoin_manager/db/: config.py  pyproject.toml
kucoin_manager/db/dao/: account_dao.py  dummy_dao.py
kucoin_manager/db/migrations/models/: 0_20220911112338_init.sql  0_20220915155521_init.sql  0_20221014185258_init.sql  0_20221029002724_init.sql  1_20220915155710_update.sql  1_20221029003524_update.sql
kucoin_manager/db/models/: __init__.py  kucoin.py  kucoin_model.py
kucoin_manager/js/: get_open_orders.js  package-lock.json  package.json  place_order.js
kucoin_manager/services/: __init__.py
kucoin_manager/static/: add_account_style.css  create_user.css  future_trade.css  future_trade.js  login.css  order_details.css  order_details.js  script.js  styles.css
kucoin_manager/tests/: __init__.py  test_dummy.py
kucoin_manager/web/: __init__.py  application.py
kucoin_manager/web/api/: __init__.py  router.py
kucoin_manager/web/api/auth/: __init__.py  views.py
kucoin_manager/web/api/auth/templates/: login.html
kucoin_manager/web/api/dummy/: __init__.py  views.py
kucoin_manager/web/api/echo/: __init__.py  views.py
kucoin_manager/web/api/kucoin/: __init__.py  exceptions.py  schema.py  utils.py  views.py
kucoin_manager/web/api/kucoin/templates/: accounts.html  create-user.html  create_user.html  footer.html  future_trade.html  index.html  navbar.html  order_details.html  orders.html  pagination.html  (+1 more)
kucoin_manager/web/api/monitoring/: __init__.py
